@@ -149,6 +149,10 @@ IN DEVELOPMENT
 
     * get_parent_map now always provides tuples as its output.  (Aaron Bentley)
 
+    * New method ``iter_inventories`` on Repository for access to many
+      inventories. This is primarily used by the ``revision_trees`` method, as
+      direct access to inventories is discouraged. (Robert Collins)
+
     * Parent Providers should now implement ``get_parent_map`` returning a
       dictionary instead of ``get_parents`` returning a list.
       ``get_parents`` is now considered deprecated.  (John Arbash Meinel)
